force-app/main/default/objects/RMS_CameraLiveAuthMng__c/RMS_CameraLiveAuthMng__c.object-meta.xml
<CustomObject>
    <label>カメラ映像権限管理</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>カメラ映像権限管理名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>