force-app/main/default/objects/RMS_CameraLiveAuthMng__c/fields/browse_end_date__c.field-meta.xml
<CustomField>
    <fullName>browse_end_date__c</fullName>
    <defaultValue>NOW() +3</defaultValue>
    <label>閲覧終了日時</label>
    <type>DateTime</type>
</CustomField>