force-app/main/default/objects/RMS_CameraLiveAuthMng__c/fields/browse_str_date__c.field-meta.xml
<CustomField>
    <fullName>browse_str_date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>閲覧開始日時</label>
    <type>DateTime</type>
</CustomField>