force-app/main/default/objects/RMS_CameraLiveAuthMng__c/fields/operater_id__c.field-meta.xml
<CustomField>
    <fullName>operater_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>オペレーターID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>operater_id_LKUP</relationshipName>
    <type>Lookup</type>
</CustomField>