force-app/main/default/objects/RMS_CameraLiveAuthMng__c/fields/sights_camera_inf_id__c.field-meta.xml
<CustomField>
    <fullName>sights_camera_inf_id__c</fullName>
    <label>Sightsカメラ情報ID</label>
    <length>36</length>
    <referenceTo>SIGHTS_CAMERA_INF__x</referenceTo>
    <relationshipLabel>カメラ映像権限管理</relationshipLabel>
    <relationshipName>CameraLiveAuthMng_sights_camera_inf_LKUP</relationshipName>
    <type>ExternalLookup</type>
</CustomField>